# taxi_availability

./: .gitignore  README.md  docker-compose.yml  dockerfile  exploratory.ipynb  ingestion.py  main.py  pyproject.toml  transformation.py
.ipynb_checkpoints/: exploratory-checkpoint.ipynb
dags/: dag.py  exploratory.ipynb  test.py
etl/: ingestion.py  transformation.py
