[project]
name = "taxi-availability"
version = "0.1.0"
description = ""
authors = [
    {name = "Wee Liang",email = "weeliangng@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "apache-airflow (>=2.10.4,<3.0.0)",
    "shapely (>=2.0.7,<3.0.0)",
    "psycopg (>=3.2.4,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
